# ccf-contacts-vetting

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
apps-script/: research-trigger.gs
docs/: architecture.md  backlog.md  crawler.md  drive-sync.md  extraction.md  ocr.md  profile-refresh.md  research-policy.md  roadmap.md  sheet-schema.md  spreadsheet-trigger.md
schemas/: workbook_schema.json
scripts/: build_workbook_template.mjs
src/ccf_contact_vetting/: __init__.py  cli.py  drive_crawler.py  drive_manifest.py  drive_ocr_fetcher.py  drive_parse_runner.py  drive_text_extraction.py  entity_extraction.py  entity_matcher.py  google_drive_connector.py  local_inventory.py  ocr.py  profile_refresh.py  sheet_append.py  vetting.py  workbook_schema.py
templates/: company_research_memo.md  contact_research_memo.md
tests/: test_drive_crawler.py  test_drive_manifest.py  test_drive_ocr_fetcher.py  test_drive_parse_runner.py  test_drive_text_extraction.py  test_entity_extraction.py  test_entity_matcher.py  test_google_drive_connector.py  test_ocr.py  test_profile_refresh.py  test_sheet_append.py  test_vetting.py  test_workbook_schema.py
