[project]
name = "ccf-contacts-vetting"
version = "0.1.0"
description = "Google Drive and Sheets relationship intelligence automation for CCF contacts vetting."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Complete Capital Funding" }
]
dependencies = []

[project.scripts]
ccf-vetting = "ccf_contact_vetting.cli:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

